AUTOMAKE_OPTIONS = subdir-objects

lib_LIBRARIES = libwmp.a

libwmp_a_SOURCES = \
  lib/int.h lib/int32.h lib/uint64.h lib/uint64gmp.h lib/fxp.h \
  lib/euclideandivision.h lib/computerdivision.h lib/valuation.h \
  lib/array.h lib/map.h lib/c.h lib/power.h lib/types.h lib/realinfix.h lib/minmax.h \
  lib/util.c lib/util.h \
  lib/logical.c lib/logical.h \
  lib/compare.c lib/compare.h \
  lib/add.c lib/add.h lib/sub.c lib/sub.h \
  lib/mul.c lib/mul.h lib/toom.c lib/toom.h \
  lib/div.c lib/div.h \
  lib/sqrt.c lib/sqrt.h lib/sqrt1.c lib/sqrt1.h lib/sqrtinit.h

include_HEADERS = wmp.h
