AUTOMAKE_OPTIONS = subdir-objects

lib_LIBRARIES = libwmp.a

libwmp_a_SOURCES = \
  lib/int.h lib/int32.h lib/uint32gmp.h lib/uint64.h lib/uint64gmp.h lib/fxp.h \
  lib/euclideandivision.h lib/computerdivision.h lib/valuation.h \
  lib/array.h lib/map.h lib/c.h lib/power.h lib/types.h lib/realinfix.h lib/minmax.h \
  lib/explog.h lib/square.h \
  lib/util.c lib/util.h \
  lib/logical.c lib/logical.h \
  lib/compare.c lib/compare.h \
  lib/add.c lib/add.h lib/sub.c lib/sub.h \
  lib/add_1.c lib/add_1.h lib/sub_1.c lib/sub_1.h \
  lib/addold.c lib/addold.h lib/subold.c lib/subold.h \
  lib/mul.c lib/mul.h lib/mul_basecase.c lib/mul_basecase.h lib/toom.c lib/toom.h \
  lib/div.c lib/div.h \
  lib/powm.c lib/powm.h lib/binverttab.h \
  lib/sqrt.c lib/sqrt.h lib/sqrt1.c lib/sqrt1.h lib/sqrtinit.h \
  lib/alias.h lib/abs.h \
  lib/z.c lib/z.h lib/zutil.c lib/zutil.h lib/zadd.c lib/zadd.h

include_HEADERS = wmp.h
